core/src/main/java/com/example/core/errors/exception/AdminSignInException.java
package com.example.core.errors.exception;

public class AdminSignInException extends Exception500 {

    public AdminSignInException(String message) {
        super(message);
    }
}
